# MakeItNow

./: .gitignore  README.md  install.ps1  install.py  install.sh  pyproject.toml  run_makeitnow.py  uninstall.ps1  uninstall.py  uninstall.sh
src/makeitnow/: __init__.py  cli.py  clone.py  compose.py  docker_build.py  docker_runtime.py  env_scan.py  install_artifacts.py  installer.py  ports.py  runtime_control.py  uninstaller.py
tests/: conftest.py  test_cli.py  test_clone.py  test_compose.py  test_docker_runtime.py  test_env_scan.py  test_installer.py  test_ports.py  test_runtime_control.py  test_uninstaller.py
