[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "makeitnow"
version = "0.1.0"
description = "Clone a GitHub repo, build its Docker image, and run it on an open port — automatically."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
makeitnow = "makeitnow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
